	<merge
		xmlns:android="http://schemas.android.com/apk/res/android">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1">

			<TextView
				android:id="@+id/digit_1"
				style="@style/KeypadBtn"
				android:text="@string/digit_1"
				/>

			<TextView
				android:id="@+id/digit_2"
				style="@style/KeypadBtn"
				android:text="@string/digit_2"
				/>

			<TextView
				android:id="@+id/digit_3"
				style="@style/KeypadBtn"
				android:text="@string/digit_3"
				/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1">

			<TextView
				android:id="@+id/digit_4"
				style="@style/KeypadBtn"
				android:text="@string/digit_4"
				/>

			<TextView
				android:id="@+id/digit_5"
				style="@style/KeypadBtn"
				android:text="@string/digit_5"
				/>

			<TextView
				android:id="@+id/digit_6"
				style="@style/KeypadBtn"
				android:text="@string/digit_6"
				/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1">

			<TextView
				android:id="@+id/digit_7"
				style="@style/KeypadBtn"
				android:text="@string/digit_7"
				/>

			<TextView
				android:id="@+id/digit_8"
				style="@style/KeypadBtn"
				android:text="@string/digit_8"
				/>

			<TextView
				android:id="@+id/digit_9"
				style="@style/KeypadBtn"
				android:text="@string/digit_9"
				/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1">

			<TextView
				android:id="@+id/digit_minus"
				style="@style/KeypadBtn"
				android:text="@string/digit_remove"
				/>

			<TextView
				android:id="@+id/digit_10"
				style="@style/KeypadBtn"
				android:text="@string/digit_10"
				/>

			<TextView
				android:id="@+id/digit_done"
				style="@style/KeypadBtn"
				android:text="@string/digit_done"
				/>

		</LinearLayout>

	</merge>
