<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<ImageView
		android:id="@+id/header_image"
		android:layout_width="match_parent"
		android:layout_height="240dp"
		android:contentDescription="@string/drawer_header_image_description"
		android:scaleType="centerCrop"
		android:src="@drawable/drawer_header"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignBottom="@id/header_image"
		android:background="?attr/drawer_header_background"
		android:orientation="vertical"
		android:paddingLeft="16dp"
		android:paddingRight="16dp"
		android:paddingTop="8dp"
		android:paddingBottom="8dp">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/drawer_header_title"
			android:textSize="24sp"
			/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/drawer_header_subtitle"
			android:textSize="16sp"
			android:textStyle="italic"/>
	</LinearLayout>

</RelativeLayout>