<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<ImageView
		android:id="@+id/drawer_header_image"
		android:layout_width="match_parent"
		android:layout_height="180dp"
		android:contentDescription="@string/drawer_header_image_description"
		android:scaleType="centerCrop"
		android:src="@drawable/drawer_header"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignBottom="@id/drawer_header_image"
		android:orientation="vertical"
		android:paddingLeft="16dp"
		android:paddingRight="16dp"
		android:paddingTop="8dp"
		android:paddingBottom="8dp">

		<TextView
			style="@style/TextAppearance.AppCompat.Headline"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/drawer_header_title"
			android:textColor="@color/text_light"/>

		<TextView
			style="@style/TextAppearance.AppCompat.Body1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/drawer_header_subtitle"
			android:textColor="@color/text_light"/>
	</LinearLayout>

</RelativeLayout>