<LinearLayout android:id="@+id/mainContainer"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#ffe1e1e1"
	android:orientation="vertical"
	tools:context="${relativePackage}.${activityClass}"
	>

	<ScrollView
		android:id="@+id/contentsContainer"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:animateLayoutChanges="true">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:animateLayoutChanges="true"
			android:orientation="vertical"
			android:padding="16dp">

			<LinearLayout
				android:id="@+id/gradesThesisGroup"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/container_card"
				android:baselineAligned="false"
				android:orientation="horizontal"
				android:padding="8dp"
				>

				<LinearLayout
					android:id="@+id/gradesContainer"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:orientation="vertical">

					<TextView
						android:id="@+id/gradesHint"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:text="@string/grades_hint_text"
						android:textSize="25sp"/>

					<TextView
						android:id="@+id/gradesInputField"
						style="@style/InputField"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:hint="@string/enter_grades_hint"
						android:onClick="onClickEventListener"
						android:textSize="22sp"
						/>
				</LinearLayout>

				<LinearLayout
					android:layout_width="0.5dp"
					android:layout_height="match_parent"
					android:layout_marginLeft="4dp"
					android:layout_marginRight="4dp"
					android:background="#ff6d6d6d"
					android:orientation="horizontal">
				</LinearLayout>

				<LinearLayout
					android:id="@+id/thesisContainer"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:minWidth="96dp"
					android:orientation="vertical">

					<TextView
						android:id="@+id/thesisHint"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:text="@string/thesis_hint_text"
						android:textSize="25sp"
						/>

					<TextView
						android:id="@+id/thesisInputField"
						style="@style/InputField"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:onClick="onClickEventListener"
						android:textSize="22sp"
						/>
				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/averageContainer"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:background="@drawable/container_card"
				android:minHeight="75dp"
				android:orientation="horizontal"
				android:padding="8dp">

				<TextView
					android:id="@+id/textView"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="left|center_vertical"
					android:text="@string/average_text"
					android:textSize="25sp"
					/>

				<TextView
					android:id="@+id/averageView"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_marginLeft="8dp"
					android:gravity="center_vertical|right"
					android:textSize="36sp"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/extraGradesContainer"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="32dp"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/textView3"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:layout_weight="3"
					android:gravity="center_vertical"
					android:text="@string/extra_grades_text"
					android:textSize="22sp"/>

				<Button
					android:id="@+id/extraGradesMinusBtn"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:layout_marginLeft="8dp"
					android:layout_weight="1"
					android:background="@drawable/keypad_btn"
					android:gravity="center"
					android:onClick="onClickEventListener"
					android:text="@string/extra_button_minus"
					android:textSize="22sp"/>

				<TextView
					android:id="@+id/extraGredesInputField"
					style="@style/InputField"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:layout_marginLeft="8dp"
					android:gravity="center"
					android:minWidth="50dp"
					android:textSize="25sp"/>

				<Button
					android:id="@+id/extraGradesPlusBtn"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:layout_marginLeft="8dp"
					android:layout_weight="1"
					android:background="@drawable/keypad_btn"
					android:gravity="center"
					android:onClick="onClickEventListener"
					android:text="@string/extra_button_plus"
					android:textSize="22sp"/>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/gradesCardsContainer"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:background="@drawable/container_card"
				android:clipChildren="true"
				android:orientation="vertical"
				android:padding="8dp">

				<LinearLayout
					android:id="@+id/gradesCardsHint"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:minHeight="48dp"
					android:orientation="horizontal"
					>

					<TextView
						android:id="@+id/textView2"
						android:layout_width="0dp"
						android:layout_height="match_parent"
						android:layout_marginBottom="4dp"
						android:layout_weight="1"
						android:gravity="center"
						android:text="@string/grades_card_grades_hint_text"
						android:textSize="22sp"/>

					<LinearLayout
						android:layout_width="0.5dp"
						android:layout_height="match_parent"
						android:layout_marginLeft="4dp"
						android:layout_marginRight="4dp"
						android:background="#ff6d6d6d"
						android:orientation="horizontal"/>

					<TextView
						android:id="@+id/textView4"
						android:layout_width="96dp"
						android:layout_height="match_parent"
						android:layout_marginBottom="4dp"
						android:gravity="center"
						android:text="@string/grades_card_average_hint_text"
						android:textSize="22sp"/>
				</LinearLayout>

				<LinearLayout
					android:id="@+id/gradesCardFragmentsContainer"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					>
				</LinearLayout>
			</LinearLayout>

		</LinearLayout>

	</ScrollView>

	<fragment android:id="@+id/keypadFragment"
		class="org.example.mediator.KeypadFrag"
		android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    tools:layout="@layout/keypad"
		/>

</LinearLayout>
