<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1">

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="16dp"
				android:background="#fff">

				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:id="@+id/sub_frag_name"
					android:textSize="24sp"
					android:layout_weight="1"
					android:layout_gravity="center_vertical"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/sub_frag_average"
					android:textSize="34sp"
					android:layout_gravity="center_vertical"/>

			</LinearLayout>

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:padding="16dp">

				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/sub_frag_grades"
					android:layout_weight="1"
					android:textSize="20sp"
					android:layout_gravity="center_vertical"/>

				<TextView
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:textSize="20sp"
					android:layout_marginLeft="5dp"
					android:layout_gravity="center_vertical"
					android:gravity="center"
					style="@style/InputField"
					android:id="@+id/sub_frag_grades"/>
			</LinearLayout>

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:padding="16dp">

				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/sub_frag_thesis"
					android:layout_weight="1"
					android:textSize="20sp"
					android:layout_gravity="center_vertical"/>

				<TextView
					style="@style/InputField"
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:textSize="20sp"
					android:layout_marginLeft="5dp"
					android:layout_gravity="center_vertical"
					android:gravity="center"
					android:id="@+id/sub_frag_thesis"/>
			</LinearLayout>

			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/sub_frag_mediator_btn"
				android:id="@+id/sub_frag_mediator_btn"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="8dp"
				android:layout_marginBottom="8dp"/>
		</LinearLayout>
	</ScrollView>

	<com.originalnexus.mediator.KeypadView
		android:id="@+id/sub_frag_keypad_fragment"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		app:slide_direction="vertical"/>


</LinearLayout>